--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(SOURCES
 	module.cpp)
 
-add_library(ytdl SHARED ${SOURCES}  "module.h")
+add_library(ytdl SHARED ${SOURCES})
 target_link_libraries(ytdl gmod-ytdl)
 
 set_gmod_suffix_prefix(ytdl)
